01. 예제 만들기 (진행중)

--- a/스프링 핵심 원리 - 고급편/01. 예제 만들기.md
+++ b/스프링 핵심 원리 - 고급편/01. 예제 만들기.md
@@ -155,5 +155,124 @@ ex=java.lang.IllegalStateException: 예외 발생!
 ### 1. TraceId
 java > hello.advanced.trace > TraceId.java (class)
 ```java
+package hello.advanced.trace;
+
+import java.util.UUID;
+
+public class TraceId {
+    private String id;
+    private int level;
+    
+    public TraceId() {
+        this.id = createId();
+        this.level = 0;
+    }
+    
+    private TraceId(String id, int level) {
+        this.id = id;
+        this.level = level;
+    }
+    
+    private String createId() {
+        return UUID.randomUUID().toString().substring(0, 8);
+    }
+    
+    public TraceId createNextId() {
+        return new TraceId(id, level + 1);
+    }
+    
+    public TraceId createPreviousId() {
+        return new TraceId(id, level - 1);
+    }
+    
+    public boolean isFirstLevel() {
+        return level == 0;
+    }
+    
+    public String getId() {
+        return id;
+    }
+    
+    public int getLevel() {
+        return level;
+    }
+}
+```
+
+#### 💡 TraceId 클래스
+- 로그 추적기는 트랜잭션 ID와 깊이를 표현하는 방법이 필요하다.
+- 여기서는 트랜잭션ID와 깊이를 표현하는 level을 묶어서 `TraceId`라는 개념을 만들었다.
+- `TraceId`는 단순히 id(트랜잭션ID)와 level 정보를 함께 가지고 있다.
+```
+[796bccd9] OrderController.request() //트랜잭션ID:796bccd9, level:0
+[796bccd9] |-->OrderService.orderItem() //트랜잭션ID:796bccd9, level:1
+[796bccd9] | |-->OrderRepository.save()//트랜잭션ID:796bccd9, level:2
+```
+#### 💡 UUID
+- TraceId를 처음 생성하면 createId() 를 사용해서 UUID를 만들어낸다.
+- 여기서는 앞 8자리만 사용
+```
+ab99e16f-3cde-4d24-8241-256108c203a2 //생성된 UUID
+ab99e16f //앞 8자리만 사용
+```
+#### 💡 createNextId()
+- 다음 TraceId를 만든다.
+- 깊이가 하나 증가하며, 깊이가 증가해도 트랜잭션ID는 같다.
+- 실행 코드 : `new TraceId(id, level + 1)`
+- 따라서 createNextId()를 사용해서 현재 TraceId를 기반으로 다음 TraceId를 만들면 id는 기존과 같고, level은 하나 증가한다.
+```
+[796bccd9] OrderController.request()
+[796bccd9] |-->OrderService.orderItem() //트랜잭션ID가 같다. 깊이는 하나 증가한다.
+```
+#### 💡 createPreviousId()
+- createNextId()의 반대 역할을 한다.
+- id는 기존과 같고, level은 하나 감소한다.
+#### 💡 isFirstLevel()
+- 첫 번째 레벨 여부를 편리하게 확인할 수 있는 메서드
+
+### 2. TraceStatus
+java > hello.advanced.trace > TraceStatus.java (class)
+```java
+package hello.advanced.trace;
+
+public class TraceStatus {
+    private TraceId traceId;
+    private Long startTimeMs;
+    private String message;
+    
+    public TraceStatus(TraceId traceId, Long startTimeMs, String message) {
+        this.traceId = traceId;
+        this.startTimeMs = startTimeMs;
+        this.message = message;
+    }
+    
+    public Long getStartTimeMs() {
+        return startTimeMs;
+    }
+    
+    public String getMessage() {
+        return message;
+    }
+    
+    public TraceId getTraceId() {
+        return traceId;
+    }
+}
+
+```
+
+#### 💡 TraceStatus 클래스
+- 로그의 상태 정보를 나타낸다.
+- `TraceStatus`는 로그를 시작할 때의 상태 정보를 가지고 있으며, 이 상태 정보는 로그를 종료할 때 사용된다.
+- `traceId` : 내부에 트랜잭션ID와 level을 가지고 있다.
+- `startTimeMs` : 로그 시작 시간이며, 로그 종료시 이 시작 시간을 기준으로 시작~종료까지 전체 수행시간을 구할 수 있다.
+- `message` : 시작시 사용한 메시지이며, 이후 로그 종료시에도 이 메시지를 사용해서 출력한다.
+
+### 3. 로그 생성 및 처리
+- `TraceId`, `TraceStatus`를 사용해서 실제 로그를 생성하고, 처리하는 기능을 개발
+
+#### 💡 HelloTraceV1
+java > hello.advanced.trace.hellotrace > HelloTraceV1.java (class)
+```java
 
 ```
