01. 예제 만들기 (진행중)

--- a/스프링 핵심 원리 - 고급편/01. 예제 만들기.md
+++ b/스프링 핵심 원리 - 고급편/01. 예제 만들기.md
@@ -274,5 +274,131 @@ public class TraceStatus {
 #### 💡 HelloTraceV1
 java > hello.advanced.trace.hellotrace > HelloTraceV1.java (class)
 ```java
+package hello.advanced.trace.hellotrace;
+
+import hello.advanced.trace.TraceId;
+import hello.advanced.trace.TraceStatus;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.stereotype.Component;
+
+@Slf4j
+@Component
+public class HelloTraceV1 {
+    private static final String START_PREFIX = "-->";
+    private static final String COMPLETE_PREFIX = "<--";
+    private static final String EX_PREFIX = "<X-";
+    
+    public TraceStatus begin(String message) {
+        TraceId traceId = new TraceId();
+        Long startTimeMs = System.currentTimeMillis();
+        log.info("[{}] {}{}", traceId.getId(), addSpace(START_PREFIX, traceId.getLevel()), message);
+        return new TraceStatus(traceId, startTimeMs, message);
+    }
+    
+    public void end(TraceStatus status) {
+        complete(status, null);
+    }
+    
+    public void exception(TraceStatus status, Exception e) {
+        complete(status, e);
+    }
+    
+    private void complete(TraceStatus status, Exception e) {
+        Long stopTimeMs = System.currentTimeMillis();
+        long resultTimeMs = stopTimeMs - status.getStartTimeMs();
+        TraceId traceId = status.getTraceId();
+        if (e == null) {
+            log.info("[{}] {}{} time={}ms", traceId.getId(), addSpace(COMPLETE_PREFIX, traceId.getLevel()), status.getMessage(), resultTimeMs);
+        } else {
+            log.info("[{}] {}{} time={}ms ex={}", traceId.getId(), addSpace(EX_PREFIX, traceId.getLevel()), status.getMessage(), resultTimeMs, e.toString());
+        }
+    }
+    
+    private static String addSpace(String prefix, int level) {
+        StringBuilder sb = new StringBuilder();
+        for (int i=0; i<level; i++) {
+            sb.append((i == level - 1) ? "|" + prefix : "| ");
+        }
+        return sb.toString();
+    }
+    
+}
+```
+
+- `HelloTraceV1`을 사용해서 실제 로그를 시작하고 종료할 수 있다. 또한, 로그를 출력하고 실행시간도 측정할 수 있다.
+- `@Component` : 싱글톤으로 사용하기 위해 스프링 빈으로 등록한다. 컴포넌트 스캔의 대상이 된다.
+
+#### 💡 공개 메서드
+로그 추적기에서 사용되는 공개 메서드는 3가지이다. (begin(..), end(..), exception(..))
+- `TraceStatus begin(String message)`
+  - 로그를 시작한다.
+  - 로그 메시지를 파라미터로 받아서 시작 로그를 출력한다.
+  - 응답 결과로 현재 로그의 상태인 TraceStatus를 반환한다.
+- `void end(TraceStatus status)`
+  - 로그를 정상 종료한다.
+  - 파라미터로 시작 로그의 상태(TraceStatus)를 전달 받는다. 이 값을 활용해서 실행 시간을 계산하고, 종료시에도 시작할 때와 동일한 로그 메시지를 출력할 수 있다.
+  - 정상 흐름에서 호출한다.
+- `void exception(TraceStatus status, Exception e)`
+  - 로그를 예외 상황으로 종료한다.
+  - TraceStatus, Exception 정보를 함께 전달 받아서 실행시간, 예외 정보를 포함한 결과 로그를 출력한다.
+  - 예외가 발생했을 때 호출한다.
+
+#### 💡 비공개 메서드
+- `complete(TraceStatus status, Exception e)`
+  - `end()`, `exception()`의 요청 흐름을 한곳에서 편리하게 처리한다. 실행 시간을 측정하고 로그를 남긴다.
+- `String addSpace(String prefix, int level)`
+  - 다음과 같은 결과를 출력
 
 ```
+prefix: "-->"
+- level 0 :
+- level 1 : "|-->"
+- level 2 : "|   |-->"
+
+prefix: "<--"
+- level 0 :
+- level 1 : "|<--"
+- level 2 : "|   |<--"
+
+prefix: "<X-"
+- level 0 :
+- level 1 : "|<X-"
+- level 2 : "|   |<x-"
+```
+
+### 4. 테스트 작성
+test > java > hello.advanced.trace.hellotrace > HelloTraceV1Test.java (class)
+```java
+package hello.advanced.trace.hellotrace;
+
+import hello.advanced.trace.TraceStatus;
+import org.junit.jupiter.api.Test;
+
+public class HelloTraceV1Test {
+    @Test
+    void begin_end() {
+        HelloTraceV1 trace = new HelloTraceV1();
+        TraceStatus status = trace.begin("hello");
+        trace.end(status);
+    }
+    
+    @Test
+    void begin_exception() {
+        HelloTraceV1 trace = new HelloTraceV1();
+        TraceStatus status = trace.begin("hello");
+        trace.exception(status, new IllegalStateException());
+    }
+}
+
+```
+```
+// begin_end() 실행 로그
+13:04:07.880 [Test worker] INFO hello.advanced.trace.hellotrace.HelloTraceV1 - [90b03594] hello
+13:04:07.891 [Test worker] INFO hello.advanced.trace.hellotrace.HelloTraceV1 - [90b03594] hello time=14ms
+// begin_exception() 실행 로그
+13:04:59.192 [Test worker] INFO hello.advanced.trace.hellotrace.HelloTraceV1 - [6ad3088a] hello
+13:04:59.208 [Test worker] INFO hello.advanced.trace.hellotrace.HelloTraceV1 - [6ad3088a] hello time=20ms ex=java.lang.IllegalStateException
+```
+
+- - -
+## ✔ 로그 추적기 V1 - 적용
