01. 예제 만들기 (진행중)

--- a/스프링 핵심 원리 - 고급편/01. 예제 만들기.md
+++ b/스프링 핵심 원리 - 고급편/01. 예제 만들기.md
@@ -576,12 +576,12 @@ public class OrderRepositoryV1 {
 ```
 
 ### 2. 남은 문제 (요구사항)
-- 모든 PUBLIC 메서드의 호출과 응답 정보를 로그로 출력 [완료]
-- 애플리케이션의 흐름을 변경하면 안됨 [완료]
-  - 로그를 남긴다고 해서 비즈니스 로직의 동작에 영향을 주면 안됨 [완료]
-- 메서드 호출에 걸린 시간 [완료]
-- 정상 흐름과 예외 흐름 구분 [완료]
-  - 예외 발생 시 예외 정보가 남아야 함 [완료]
+- ~~모든 PUBLIC 메서드의 호출과 응답 정보를 로그로 출력~~
+- ~~애플리케이션의 흐름을 변경하면 안됨~~
+  - ~~로그를 남긴다고 해서 비즈니스 로직의 동작에 영향을 주면 안됨~~
+- ~~메서드 호출에 걸린 시간~~
+- ~~정상 흐름과 예외 흐름 구분~~
+  - ~~예외 발생 시 예외 정보가 남아야 함~~
 
 - 메서드의 호출의 깊이 표현
 - HTTP 요청을 구분
