01. 예제 만들기 (진행중)

--- a/스프링 핵심 원리 - 고급편/01. 예제 만들기.md
+++ b/스프링 핵심 원리 - 고급편/01. 예제 만들기.md
@@ -591,3 +591,123 @@ public class OrderRepositoryV1 {
 
 - - -
 ## ✔ 로그 추적기 V2 - 파라미터로 동기화 개발
+- 트랜잭션 ID와 메서드 호출의 깊이를 표현하는 방법은 `트랜잭션ID`와 `level`을 다음 로그에 넘겨주면 된다.
+
+### 1. HelloTraceV2
+java > hello.advanced.trace.hellotrace > HelloTraceV2.java (class)
+```java
+// HelloTraceV2는 기존 코드인 HelloTraceV1과 같고, `beginSync(..)`가 추가되었다.
+
+package hello.advanced.trace.hellotrace;
+
+import hello.advanced.trace.TraceId;
+import hello.advanced.trace.TraceStatus;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.stereotype.Component;
+
+@Slf4j
+@Component
+public class HelloTraceV2 {
+    private static final String START_PREFIX = "-->";
+    private static final String COMPLETE_PREFIX = "<--";
+    private static final String EX_PREFIX = "<X-";
+
+    public TraceStatus begin(String message) {
+        TraceId traceId = new TraceId();
+        Long startTimeMs = System.currentTimeMillis();
+        log.info("[{}] {}{}", traceId.getId(), addSpace(START_PREFIX, traceId.getLevel()), message);
+        return new TraceStatus(traceId, startTimeMs, message);
+    }
+
+    // V2에서 추가
+    public TraceStatus beginSync(TraceId beforeTraceId, String message) {
+        TraceId nextId = beforeTraceId.createNextId();
+        Long startTimeMs = System.currentTimeMillis();
+        log.info("[" + nextId.getId() + "] " + addSpace(START_PREFIX, nextId.getLevel()) + message);
+        return new TraceStatus(nextId, startTimeMs, message);
+    }
+
+    public void end(TraceStatus status) {
+        complete(status, null);
+    }
+
+    public void exception(TraceStatus status, Exception e) {
+        complete(status, e);
+    }
+
+    private void complete(TraceStatus status, Exception e) {
+        Long stopTimeMs = System.currentTimeMillis();
+        long resultTimeMs = stopTimeMs - status.getStartTimeMs();
+        TraceId traceId = status.getTraceId();
+        if (e == null) {
+            log.info("[{}] {}{} time={}ms", traceId.getId(), addSpace(COMPLETE_PREFIX, traceId.getLevel()), status.getMessage(), resultTimeMs);
+        } else {
+            log.info("[{}] {}{} time={}ms ex={}", traceId.getId(), addSpace(EX_PREFIX, traceId.getLevel()), status.getMessage(), resultTimeMs, e.toString());
+        }
+    }
+
+    private static String addSpace(String prefix, int level) {
+        StringBuilder sb = new StringBuilder();
+        for (int i=0; i<level; i++) {
+            sb.append((i == level - 1) ? "|" + prefix : "| ");
+        }
+        return sb.toString();
+    }
+}
+```
+#### 💡 beginSync(..)
+- 기존 TraceId에서 createNextId()를 통해 다음 ID를 구한다.
+- createNextId()의 TraceId 생성 로직은 다음과 같다.
+  - 트랜잭션 ID는 기존과 같이 유지한다.
+  - 깊이를 표현하는 Level은 하나 증가한다. (0 --> 1)
+
+### 2. HelloTraceV2Test
+test > hello.advanced.trace.hellotrace > HelloTraceV2Test.java (class)
+```java
+package hello.advanced.trace.hellotrace;
+
+import hello.advanced.trace.TraceStatus;
+import org.junit.jupiter.api.Test;
+
+public class HelloTraceV2Test {
+    @Test
+    void begin_end_level2() {
+        HelloTraceV2 trace = new HelloTraceV2();
+        TraceStatus status1 = trace.begin("hello1");
+        TraceStatus status2 = trace.beginSync(status1.getTraceId(), "hello2");
+        trace.end(status2);
+        trace.end(status1);
+    }
+
+    @Test
+    void begin_exception_level2() {
+        HelloTraceV2 trace = new HelloTraceV2();
+        TraceStatus status1 = trace.begin("hello");
+        TraceStatus status2 = trace.beginSync(status1.getTraceId(), "hello2");
+        trace.exception(status2, new IllegalStateException());
+        trace.exception(status1, new IllegalStateException());
+    }
+}
+```
+- 처음에는 begin(..)을 사용하고, 이후에는 beginSync(..)를 사용하면 된다.
+- beginSync(..)를 호출할 때 직전 로그의 traceId 정보를 넘겨주어야 한다.
+
+#### 💡 begin_end_level2() - 실행 로그
+```
+// 트랜잭션ID를 유지하고, level을 통해 메서드 호출의 깊이를 표현하는 것을 확인할 수 있다.
+[7d2b512e] hello1
+[7d2b512e] |-->hello2
+[7d2b512e] |<--hello2 time=56ms
+[7d2b512e] hello1 time=103ms
+```
+#### 💡 begin_exception_level2() - 실행 로그
+```
+// 트랜잭션ID를 유지하고, level을 통해 메서드 호출의 깊이를 표현하는 것을 확인할 수 있다.
+[26ea181e] hello
+[26ea181e] |-->hello2
+[26ea181e] |<X-hello2 time=37ms ex=java.lang.IllegalStateException
+[26ea181e] hello time=53ms ex=java.lang.IllegalStateException
+```
+
+- - -
+## ✔ 로그 추적기 V2 - 적용
